Add storybook addons

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,7 +61,9 @@
     "@storybook/addon-links": "^6.3.8",
     "@storybook/node-logger": "^6.3.8",
     "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "^6.3.8"
+    "@storybook/react": "^6.3.8",
+    "storybook-addon-styled-component-theme": "^2.0.0",
+    "storybook-react-router": "^1.0.8"
   },
   "proxy": "http://localhost:5000"
 }
